--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -12,7 +12,7 @@
             <a href="https://twitter.com/{{ site.twitter_username }}">
               <i class="fa fa-twitter fa-3x fa-fw"></i>
             </a> {% endif %} {% if site.github_username %}
-            <a href="https://github.com/{{ site.github_username }}">
+            <a href="{{ site.repository_url }}">
               <i class="fa fa-github fa-3x fa-fw"></i>
             </a> {% endif %} {% if site.envelope_username %}
             <a href="mailto:{{ site.envelope_username }}">
